--- a/templates/index.html
+++ b/templates/index.html
@@ -19,15 +19,18 @@
             <div class="jumbotron">
                 <h1 class="display-4">Python Programming - Google API</h1>
                 <hr class="my-4">
+
                 <form method="post" action="/">
                     <p>
                         <input type="submit" value="Process Google Sheet" name="sheet" class="btn btn-primary" />
+                        {{message}}
+                    </p>
+                    <p>
                         <a target="_blank"
                             href="https://docs.google.com/spreadsheets/d/1UTJXmS_sBIY9X-GaiIqS_IdtlLO4flHP32nQIsiQ6Hk/edit?usp=sharing">Mailing
                             Address Sheet</a>
                     </p>
                     <p>
-                        <input type="submit" value="Process Google Docs" name="docs" class="btn btn-primary" />
 
                         <a target="_blank"
                             href="https://docs.google.com/document/d/18xQzPIpvjLaB2fiDExlAmNH_sSjabeyD1Iq6e56BnkU/edit?usp=sharing">Mailing
